taskapp 課題の手前まで完成しました。

--- a/taskapp/Base.lproj/Main.storyboard
+++ b/taskapp/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ZvX-zJ-VTa">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="taskapp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,168 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iTn-zn-aq6">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="AD7-C0-h3o" detailTextLabel="132-1r-iZm" style="IBUITableViewCellStyleSubtitle" id="AF4-VD-X3V">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="AF4-VD-X3V" id="hlu-qu-K9B">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AD7-C0-h3o">
+                                                    <rect key="frame" x="15" y="4" width="34" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="132-1r-iZm">
+                                                    <rect key="frame" x="15" y="25" width="44" height="15"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="iTn-zn-aq6" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="9Vc-bh-obZ"/>
+                            <constraint firstItem="iTn-zn-aq6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="PhU-TI-lhd"/>
+                            <constraint firstAttribute="trailing" secondItem="iTn-zn-aq6" secondAttribute="trailing" id="uTj-ws-RcH"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="iTn-zn-aq6" secondAttribute="bottom" id="wVb-fa-5K6"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="iEl-k5-5zx">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="DWM-Y6-GVs">
+                            <connections>
+                                <segue destination="5Wc-gN-hwW" kind="show" id="ynZ-Fb-6xr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="kgx-Ev-LGj" id="xd7-qZ-F5w"/>
+                        <outlet property="tableView" destination="iTn-zn-aq6" id="e1U-Sp-w55"/>
+                        <segue destination="5Wc-gN-hwW" kind="show" identifier="cellSegue" id="9Rb-8a-Zuv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="kgx-Ev-LGj">
+                    <connections>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="s6r-AZ-uEc"/>
+                        <outlet property="searchContentsController" destination="BYZ-38-t0r" id="xK6-K9-fur"/>
+                        <outlet property="searchResultsDataSource" destination="BYZ-38-t0r" id="8qx-cb-iSS"/>
+                        <outlet property="searchResultsDelegate" destination="BYZ-38-t0r" id="ckw-mj-hCU"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
+            <point key="canvasLocation" x="972" y="37.331334332833585"/>
+        </scene>
+        <!--Input View Controller-->
+        <scene sceneID="PGu-UT-S9X">
+            <objects>
+                <viewController id="5Wc-gN-hwW" customClass="InputViewController" customModule="taskapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zE2-yU-b5a"/>
+                        <viewControllerLayoutGuide type="bottom" id="HZ5-HG-yXj"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9ct-df-iPz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Glc-yM-fiZ">
+                                <rect key="frame" x="16" y="74" width="70" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4yh-M4-zpz">
+                                <rect key="frame" x="16" y="105" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bC9-x8-agb">
+                                <rect key="frame" x="16" y="145" width="35" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Tj9-dp-gRb">
+                                <rect key="frame" x="16" y="176" width="343" height="120"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="p77-Kd-AGV"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="lLw-ce-vHa">
+                                <rect key="frame" x="0.0" y="306" width="375" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="xYD-iQ-Qce"/>
+                                </constraints>
+                                <date key="date" timeIntervalSinceReferenceDate="501511728.15683198">
+                                    <!--2016-11-22 12:48:48 +0000-->
+                                </date>
+                            </datePicker>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="lLw-ce-vHa" secondAttribute="trailing" id="4ck-E3-mu4"/>
+                            <constraint firstItem="lLw-ce-vHa" firstAttribute="leading" secondItem="9ct-df-iPz" secondAttribute="leading" id="Acj-Se-fMm"/>
+                            <constraint firstItem="bC9-x8-agb" firstAttribute="top" secondItem="4yh-M4-zpz" secondAttribute="bottom" constant="10" id="FXe-4n-cZa"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Tj9-dp-gRb" secondAttribute="trailing" id="LVc-Mv-7HY"/>
+                            <constraint firstItem="Glc-yM-fiZ" firstAttribute="top" secondItem="zE2-yU-b5a" secondAttribute="bottom" constant="10" id="Mtl-6n-079"/>
+                            <constraint firstItem="4yh-M4-zpz" firstAttribute="top" secondItem="Glc-yM-fiZ" secondAttribute="bottom" constant="10" id="Oe0-zk-ojL"/>
+                            <constraint firstItem="Tj9-dp-gRb" firstAttribute="leading" secondItem="9ct-df-iPz" secondAttribute="leadingMargin" id="TXZ-BX-hYo"/>
+                            <constraint firstItem="lLw-ce-vHa" firstAttribute="top" secondItem="Tj9-dp-gRb" secondAttribute="bottom" constant="10" id="d72-V8-ltu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4yh-M4-zpz" secondAttribute="trailing" id="i8P-l2-ZeG"/>
+                            <constraint firstItem="4yh-M4-zpz" firstAttribute="leading" secondItem="9ct-df-iPz" secondAttribute="leadingMargin" id="kEa-Qm-5RO"/>
+                            <constraint firstItem="Tj9-dp-gRb" firstAttribute="top" secondItem="bC9-x8-agb" secondAttribute="bottom" constant="10" id="mni-QU-bw5"/>
+                            <constraint firstItem="bC9-x8-agb" firstAttribute="leading" secondItem="9ct-df-iPz" secondAttribute="leadingMargin" id="pJt-Z1-Gk7"/>
+                            <constraint firstItem="Glc-yM-fiZ" firstAttribute="leading" secondItem="9ct-df-iPz" secondAttribute="leadingMargin" id="r7S-1L-HpR"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="contentsTextView" destination="Tj9-dp-gRb" id="ZBZ-q1-2Fk"/>
+                        <outlet property="datePicker" destination="lLw-ce-vHa" id="hQk-b5-3RX"/>
+                        <outlet property="titleTextField" destination="4yh-M4-zpz" id="yHM-1K-5VQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hze-Bt-GY1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1657" y="37"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="dnL-Zl-Al7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZvX-zJ-VTa" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="8Fi-FQ-l3e">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="vh7-GE-XIZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kqk-rt-RYW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-103.2" y="-645.42728635682158"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="9Rb-8a-Zuv"/>
+    </inferredMetricsTieBreakers>
 </document>
